--- a/php/layout/main.phtml
+++ b/php/layout/main.phtml
@@ -315,6 +315,7 @@ if (!empty($variables['parents'])) {
             </div>
           <?php else : ?>
             <div class="sidebar__bottom">
+              <a class="sidebar__bottom-shop" href="/contacts">Контакты</a>
               <a class="sidebar__bottom-shop" href="https://tvoybasseyn.ru">Строительство бассейнов</a>
               <div class="sidebar__bottom-logo" style="padding: 0.4rem 3rem;"><a href="https://tvoybasseyn.ru">
                   <svg width="145" height="36" viewBox="0 0 145 36" fill="none" xmlns="http://www.w3.org/2000/svg">
