--- a/php/catalog/index/slider_block.phtml
+++ b/php/catalog/index/slider_block.phtml
@@ -6,7 +6,7 @@
             <div class="building-slider__content">
               <div class="building-slider__title">Строительство бассейнов</div>
               <div class="building-slider__subtitle">Спроектируем в 3D и построим ваш бассейн в любом регионе России</div>
-              <div class="btn">Подробнее</div>
+              <a href="https://tvoybasseyn.ru" class="btn">Подробнее</a>
             </div>
           </div>
         </div>
@@ -15,7 +15,7 @@
             <div class="building-slider__content">
               <div class="building-slider__title">Строительство бассейнов</div>
               <div class="building-slider__subtitle">Спроектируем в 3D и построим ваш бассейн в любом регионе России</div>
-              <div class="btn">Подробнее</div>
+              <a href="https://tvoybasseyn.ru" class="btn">Подробнее</a>
             </div>
           </div>
         </div>
@@ -24,7 +24,7 @@
             <div class="building-slider__content">
               <div class="building-slider__title">Строительство бассейнов</div>
               <div class="building-slider__subtitle">Спроектируем в 3D и построим ваш бассейн в любом регионе России</div>
-              <div class="btn">Подробнее</div>
+              <a href="https://tvoybasseyn.ru" class="btn">Подробнее</a>
             </div>
           </div>
         </div>
@@ -33,7 +33,7 @@
             <div class="building-slider__content">
               <div class="building-slider__title">Строительство бассейнов</div>
               <div class="building-slider__subtitle">Спроектируем в 3D и построим ваш бассейн в любом регионе России</div>
-              <div class="btn">Подробнее</div>
+              <a href="https://tvoybasseyn.ru" class="btn">Подробнее</a>
             </div>
           </div>
         </div>
@@ -42,7 +42,7 @@
             <div class="building-slider__content">
               <div class="building-slider__title">Строительство бассейнов</div>
               <div class="building-slider__subtitle">Спроектируем в 3D и построим ваш бассейн в любом регионе России</div>
-              <div class="btn">Подробнее</div>
+              <a href="https://tvoybasseyn.ru" class="btn">Подробнее</a>
             </div>
           </div>
         </div>
