--- a/src/assets/css/blocks/sections/product.scss
+++ b/src/assets/css/blocks/sections/product.scss
@@ -701,6 +701,9 @@
 
 .product__info2 {
     width: 66%;
+    &.inactive {
+        visibility: hidden;
+    }
 }
 
 .product__info2-model {
@@ -718,22 +721,6 @@
     height: 117px;
     width: 294px;
     text-align: right;
-    &:before {
-        position: absolute;
-        top: -15px;
-        width: 254px;
-        height: 1px;
-        background-color: #cdcdcd;
-        content: '';
-    }
-    &:after {
-        position: absolute;
-        left: 15px;
-        width: 1px;
-        height: 83px;
-        background-color: #cdcdcd;
-        content: '';
-    }
 }
 
 .product__info2-length, .product__info2-width, .product__info2-depth {
@@ -779,6 +766,9 @@
 
 .product__purchase {
     width: 178px;
+    &.inactive {
+        visibility: hidden;
+    } 
 }
 
 .product__purchase-prices {
@@ -843,12 +833,37 @@
     &:last-child {
         border-bottom: none;
     }
+    &:hover {
+        opacity: 1;
+    }
 }
 
-.product__dropdown .toggle_modelsDropdown, .product__info2-model .toggle_modelsDropdown  { 
+.product__modelDropdown {
+    opacity: 0.5;
+    &:hover {
+        opacity: 1;
+    }
+}
+
+.product__info2-model .toggle_modelsDropdown  { 
     font-size: 29px;
     border-bottom: 2px dashed;
     text-decoration: none;
+    svg {
+        position: relative;
+        bottom: 5px;
+    }
+    &:hover {
+        color: #3b3b3b;
+    }
+}
+
+.product__dropdown .toggle_modelsDropdown {
+    font-size: 29px;
+    text-decoration: none;
+    &:hover {
+        color: #3b3b3b;
+    }
 }
 
 .product__dropdown-title {
@@ -883,7 +898,7 @@
     width: 8%;
 }
 
-.product__info2 .product__dropdowns {
+.product__main .product__dropdowns {
     position: absolute;
     width: 100%;
     top: -44px;
