--- a/php/catalog/category/filters/field/interval/slider.phtml
+++ b/php/catalog/category/filters/field/interval/slider.phtml
@@ -51,7 +51,7 @@ if ($data["title"] == "Цена") {
 	<svg class="select__arrow" width="6" height="4" viewBox="0 0 6 4" fill="none" xmlns="http://www.w3.org/2000/svg">
 	<path d="M2.86243 4L0.643236 0.25L5.08162 0.25L2.86243 4Z"></path>
 	</svg>
-	<div class="select__variants select__variants-range" style="margin-top:1rem">
+	<div class="select__variants select__variants-range">
 		<div class="col-md-12 delta_price clearfix">
 		<div style="margin-right: 10px;"><span style="margin-right: 5px;">от</span><input type="text" name="<?= $data['name_from'] ?>" value="<?= $data['selected_min'] ?>" data-minimum="<?= $data['min'] ?>" class="min" /></div>
 		<div><span style="margin-right: 5px;">до</span><input type="text" name="<?= $data['name_to'] ?>" value="<?= $data['selected_max'] ?>" data-maximum="<?= $data['max'] ?>" class="max" /></div>
